--- a/src/composer.json
+++ b/src/composer.json
@@ -35,6 +35,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "maatwebsite/excel": "^3.1",
         "php-ffmpeg/php-ffmpeg": "^1.1",
+        "phpoffice/phpspreadsheet": "^1.27",
         "sentry/sentry-laravel": "^2.12",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-googletagmanager": "^2.6",
