--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install composer dependencies
-      run: composer install --optimize-autoloader --no-dev
+      run: composer install --optimize-autoloader --no-dev --quiet
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
