--- a/src/composer.json
+++ b/src/composer.json
@@ -14,6 +14,7 @@
         "php": "^8.1",
         "appstract/laravel-opcache": "^4.0",
         "default-089/sxgeo": "0.16.*@dev",
+        "defstudio/telegraph": "^1.37",
         "deployer/deployer": "^7.0",
         "diglactic/laravel-breadcrumbs": "^8.1",
         "dmitrakovich/smstraffic-for-laravel": "^0.1.5",
