--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,11 @@
         "blade-formatter": "^1.31.0",
         "bootstrap": "^4.6.1",
         "cross-env": "^7.0",
+        "eslint": "^8.46.0",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-n": "^16.0.1",
+        "eslint-plugin-promise": "^6.1.1",
         "jquery": "^3.5.1",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.21",
