--- a/src/composer.json
+++ b/src/composer.json
@@ -36,6 +36,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "maatwebsite/excel": "^3.1",
         "php-ffmpeg/php-ffmpeg": "^1.1",
+        "picqer/php-barcode-generator": "^2.3",
         "sentry/sentry-laravel": "^3.2",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-googletagmanager": "^2.6",
