--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,16 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "admin": "mix --mix-config=webpack.admin.js",
+        "front": "mix --mix-config=webpack.front.js",
+        "dev": "npm run admin && npm run front",
         "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
+        "watch-admin": "npm run admin watch",
+        "watch-front": "npm run front watch",
+        "watch-admin-poll": "npm run admin watch -- --watch-options-poll=1000",
+        "watch-front-poll": "npm run front watch -- --watch-options-poll=1000",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "npm run admin --production && npm run front --production"
     },
     "devDependencies": {
         "axios": "^0.27.2",
@@ -21,6 +24,7 @@
         "eslint-plugin-promise": "^6.1.1",
         "jquery": "^3.5.1",
         "laravel-mix": "^6.0.43",
+        "laravel-mix-merge-manifest": "^2.1.0",
         "lodash": "^4.17.21",
         "popper.js": "^1.12",
         "resolve-url-loader": "^5.0.0",
