--- a/src/composer.json
+++ b/src/composer.json
@@ -52,6 +52,7 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.9",
         "laravel/pint": "^1.2",
+        "laravel/sail": "^1.26",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "orangehill/iseed": "^3.0",
