--- a/src/composer.json
+++ b/src/composer.json
@@ -57,6 +57,7 @@
         "nunomaduro/collision": "^7.0",
         "orangehill/iseed": "^3.0",
         "phpunit/phpunit": "^10.0",
+        "romanzipp/laravel-model-doc": "^2.1",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
