--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
         "production": "npm run admin --production && npm run front --production"
     },
     "devDependencies": {
+        "@sentry/webpack-plugin": "^2.10.3",
         "axios": "^1.6.0",
         "blade-formatter": "^1.31.0",
         "bootstrap": "^4.6.1",
@@ -37,6 +38,7 @@
     },
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
+        "@sentry/browser": "^7.98.0",
         "autoprefixer": "10.4.5",
         "cropperjs": "^1.5.9",
         "ion-rangeslider": "^2.3.1",
