--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,8 +1,11 @@
 name: CI
-on: push
+
+on:
+  push:
+    branches: [ master ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v1
 
