--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -10,16 +10,16 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Get Branch
-      id: branch
-      run: echo "git_branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_BRANCH
+    # - name: Get Branch
+    #   id: branch
+    #   run: echo "git_branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_BRANCH
 
     - name: Check Branch
       run: echo "${{ env.branch }}"
 
-    - name: Get Hash
-      id: hash
-      run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH
+    # - name: Get Hash
+    #   id: hash
+    #   run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH
 
     - name: Check Hash
       run: echo "${{ env.hash }}"
