--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -75,7 +75,7 @@ jobs:
         touch ~/.ssh/deploy
         (echo ${{ secrets.DEPLOY_SSH_KEY }} | base64 --decode -i > ~/.ssh/deploy)
         chmod 700 ~/.ssh/deploy
-        php ./vendor/bin/dep deploy release_name=${{ env.sha_short }} ${{ inputs.deploy_params }}
+        php ./vendor/bin/dep deploy release_name="${{ env.sha_short }}" ${{ inputs.deploy_params }}
 
     - name: Create Sentry release
       uses: getsentry/action-release@v1
