--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,6 @@
 includes:
-   - phpstan-baseline.neon
+    # - src/vendor/larastan/larastan/extension.neon
+    - phpstan-baseline.neon
 
 parameters:
   phpVersion: 80120
