--- a/src/composer.json
+++ b/src/composer.json
@@ -54,13 +54,13 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "^2.0",
         "laravel/breeze": "^1.9",
         "laravel/pint": "^1.2",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "orangehill/iseed": "^3.0",
-        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.0",
         "romanzipp/laravel-model-doc": "^3.1",
         "spatie/laravel-ignition": "^2.0"
