--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -21,4 +21,4 @@ jobs:
         run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Execute PHPStan
-        run: src/vendor/bin/phpstan analyse
+        run: src/vendor/bin/phpstan analyse -v
