--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -5,6 +5,9 @@ on: [ push, pull_request_target ]
 jobs:
   phpstan:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
 
     steps:
       - name: Checkout code
@@ -22,11 +25,10 @@ jobs:
       - name: Download and extract sxGeo database
         run: |
           wget https://sypexgeo.net/files/SxGeoCountry.zip
-          unzip SxGeoCountry.zip -d src/database/sxgeo
+          unzip SxGeoCountry.zip -d database/sxgeo
 
       - name: Install dependencies
-        working-directory: ./src
         run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Execute PHPStan
-        run: src/vendor/bin/phpstan analyse -v
+        run: vendor/bin/phpstan analyse -v
